[package]
name = "polkadot-rpc"
version = "0.7.33"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef"  }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
