[package]
name = "polkadot-network-test"
version = "0.8.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-network = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"], branch = "master" }
sc-network-test = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sp-consensus = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb9980596301fe1afd36478a6725157ef" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
